--- a/PaymentContext.Domain/PaymentContext.Domain.csproj
+++ b/PaymentContext.Domain/PaymentContext.Domain.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\PaymentContext.Share\PaymentContext.Share.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="flunt" Version="1.0.4" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
